<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:paddingLeft="80dp"
    android:paddingRight="80dp"  
    android:gravity="center"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dip"
        android:textStyle="bold"
        android:textColor="#99CC00"
        android:layout_centerHorizontal="true"
        android:lineSpacingExtra="3dp"
        android:lineSpacingMultiplier="1.4"
        android:text="@string/app_name" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" 
        android:visibility="gone" />
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:hint="@string/username" />
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" 
        android:visibility="gone"/>
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dip"
        android:hint="@string/password" />
    <Button
        android:id="@+id/loginButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:background="#FFBB33"
        android:layout_marginBottom="5dip"
        android:layout_centerHorizontal="true"
        android:text="@string/login" />
    <Button
        android:id="@+id/registerButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:background="#FF4444"
        android:layout_centerHorizontal="true"
        android:text="@string/register" />
    <TextView 
        android:id="@+id/loginError"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerButton"
        android:layout_centerHorizontal="true"/>
    
</RelativeLayout>
