<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:paddingLeft="80dp"
    android:paddingRight="80dp"  
    android:gravity="center"   
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/mapButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#99CC00"
        android:layout_marginBottom="5dip"
        android:text="@string/show_map_string" />
    
    <Button 
        android:id="@+id/friendButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mapButton"
        android:background="#FFBB33"
        android:layout_marginBottom="5dip"
        android:layout_centerHorizontal="true"
        android:text="@string/friend" />

    <Button 
        android:id="@+id/messageButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friendButton"
        android:background="#FF4444"
        android:layout_centerHorizontal="true"
        android:text="@string/message" />
    
</RelativeLayout> 